--- a/CA3/project_helper/apssamp.bib
+++ b/CA3/project_helper/apssamp.bib
@@ -29,3 +29,63 @@
  journal={https://www.math.fsu.edu/}, 
  author={Chen, Yuanda}
  } 
+   
+ @book{billingsley_1995, 
+ place={New York}, 
+ title={Probability and measure}, 
+ publisher={J. Wiley \& Sons}, 
+ author={Billingsley, Patrick}, 
+ year={1995}
+ } 
+ 
+ @misc{pasupathy, 
+ title={Generating nonhomogeneous Poisson processes}, 
+ url={https://web.ics.purdue.edu/~pasupath/PAPERS/2011pasB.pdf}, 
+ journal={https://web.ics.purdue.edu/}, 
+ author={Pasupathy, Raghu}
+ } 
+ 
+ @book{cinlar1975introduction,
+  title={Introduction to stochastic processes},
+  author={Cinlar, Erhan},
+  year={1975},
+  publisher={Prentice-Hall}
+}
+
+ @article{lewis_shedler_1976, 
+ title={Simulation of nonhomogeneous Poisson processes with log linear rate function}, 
+ volume={63}, 
+ DOI={10.1093/biomet/63.3.501}, 
+ number={3}, 
+ journal={Biometrika}, 
+ author={Lewis, P. A. and Shedler, G. S.}, 
+ year={1976}, 
+ pages={501–505}
+ } 
+
+ @article{vere-jones_1970, 
+ title={Stochastic models for earthquake occurrence}, 
+ volume={32}, 
+ DOI={10.1111/j.2517-6161.1970.tb00814.x}, 
+ number={1}, 
+ journal={Journal of the Royal Statistical Society: Series B (Methodological)}, 
+ author={Vere-Jones, D.}, 
+ year={1970}, 
+ pages={1–45}
+ } 
+ 
+ @incollection{gabbiani_cox_2010,
+  author      = "Fabrizio Gabbiani and Steven J. Cox",
+  title       = "Stochastic Processes",
+  booktitle   = "Mathematics for Neuroscientists",
+  publisher   = "Academic Press",
+  year        = 2010,
+  pages       = "251-266",
+  chapter     = 16,
+} 
+  
+  @misc{wikipedia_2023,
+  title={Poisson point process}, 
+  howpublished = {\url{https://en.wikipedia.org/wiki/Poisson_point_process}},
+  note = {Accessed: 2023-04-07}
+} 
