--- a/CA3/project_helper/apssamp.tex
+++ b/CA3/project_helper/apssamp.tex
@@ -76,7 +76,7 @@
              %  but any date may be explicitly specified
 
 \begin{abstract}
-This project is about Non-Homogeneous Poisson processes and how to simulate them. We will be reviewing the thinning algorithm of Lewis and Shedler (1979) for simulating NHPP.
+This project is about Non-Homogeneous Poisson processes and how to simulate them. The thinning algorithm of Lewis and Shedler (1979) for simulating these processes will be discussed.
 
 \end{abstract}
 
@@ -84,7 +84,7 @@ This project is about Non-Homogeneous Poisson processes and how to simulate them
 
 \section{\label{sec:level1}Introduction}
 
-Homogeneous Poisson processes are the natural representation of processes occuring in time. As they follow a fixed rate of `event occurrence', they are unable to model processes with varying incidence rate, such as shocks before and after earthquakes \cite{vere-jones_1970}, fluctuations in neural data \cite{gabbiani_cox_2010}, events with time-of-day patterns or those showing long-term growth or decay.\\
+Homogeneous Poisson processes (HPP) are the natural representation of events occuring in time. As they follow a fixed rate of `event occurrence', they are unable to model processes with varying incidence rate, such as shocks before and after earthquakes \cite{vere-jones_1970}, fluctuations in neural data \cite{gabbiani_cox_2010}, events with time-of-day patterns or those showing long-term growth or decay.\\
 
 
 This report will be loosely structured according to the following points:
@@ -94,13 +94,15 @@ This report will be loosely structured according to the following points:
 \item Simulation of occurrence of 1000 successive events ${t_1, t_2, . . . , t_{1000}}$ for a homogeneous Poisson process having a rate of 8 events per year, followed by visual representation of the same;
 
 \item Determining whether the thinning algorithm can be used on the previous homogeneous Poisson process data to simulate an NHPP with a rate function that increases smoothly from 1 event per year at $t = 0$ by 1\% per year, i.e. $\lambda(t) = (1.01)^t$;
-\item Code to find occurence times for a NHPP having the rate function $\lambda(t) = (1.01)^t$ by using the thinning algorithm;
+\item Code to find occurence times for an NHPP having the rate function $\lambda(t) = (1.01)^t$ by using the thinning algorithm;
 \item Comparison of the plots of HPP and NHPP to demonstrate differences between the two.
 
 \end{enumerate}
 
 \section{\label{q:1}Description and Mathematical Definition}
-A non-homogeneous Poisson process can be thought of as a generalization of the homogeneous Poisson process. As opposed to its homogeneous counterpart where rate of occurrence of events is constant (denoted by $\lambda$), here the rate is a function of time, denoted by $\lambda(t)$. The process is specified either through its rate function $\lambda(t)$ (when it exists), or more generally through its expectation function $\Lambda(t) \equiv  E[N(t)]$. $\Lambda(\cdot)$ is therefore, monotone, non-decreasing and right-continuous. When the rate function $\lambda(t)$ exists, $\Lambda(t) = \int_{0}^{t}\lambda(y) dy$ \cite{pasupathy}. Thus, the number of occurrences in the interval $(0,T]$ follows Poisson distribution $Pois(\int_{0}^{T}\lambda(t)dt)$ \cite{chen}. More formally, allowing the rate parameter to vary with time results in the following definition.
+A non-homogeneous Poisson process can be thought of as a generalization of the homogeneous Poisson process. As opposed to its homogeneous counterpart where rate of occurrence of events is constant (denoted by $\lambda$), here the rate is a function of time, denoted by $\lambda(t)$. The process is specified either through its rate function $\lambda(t)$ (when it exists), or more generally through its expectation function $\Lambda(t) \equiv  E[N(t)]$. $\Lambda(\cdot)$ is therefore, monotone, non-decreasing and right-continuous. \\
+
+When the rate function $\lambda(t)$ exists, $\Lambda(t) = \int_{0}^{t}\lambda(y) dy$ \cite{pasupathy}. Thus, the number of occurrences in the interval $(0,T]$ follows Poisson distribution $Pois(\int_{0}^{T}\lambda(y)dy)$ \cite{chen}. More formally, allowing the rate parameter to vary with time results in the following definition.
 
 \begin{definition}[Ross, 2006, p.339, Definition 5.4] \cite{Ross_2006} The counting process ${N(t), t \ge 0}$ is said to be a nonhomogeneous Poisson process with intensity function $\lambda(t) \ge 0, t \ge 0$, if
 \begin{enumerate}
@@ -112,16 +114,16 @@ A non-homogeneous Poisson process can be thought of as a generalization of the h
 where $o(h)$ carries its usual meaning - a function $\phi(h)$, that satisfies the condition that $\frac{\phi(h)}{h}\to\infty$ as $h\to\infty$ \cite{billingsley_1995}.
 \end{definition}
 
-Time sampling an ordinary Poisson process (with constant rate $\lambda$) results in a Non-Homogeneous Poisson process. Given $\{N(t), t \ge 0\}$, a Poisson process wih rate $\lambda$, if the event occurring at time $t$ is counted with probability $p(t)$, then $\{N_c(t) , t\ge 0\}$ is a Non-Homogeneous Poisson process \cite{Ross_2006}.
+Time sampling an ordinary Poisson process (with constant rate $\lambda$) results in a Non-Homogeneous Poisson process. Given a Poisson process $\{N(t), t \ge 0\}$ with rate $\lambda$, if the event occurring at time $t$ is counted with probability $p(t)$, then the resulting point process $\{N_c(t) , t\ge 0\}$, is a Non-Homogeneous Poisson process \cite{Ross_2006}. It should be noted that unlike in HPP, the intervals between points in an NHPP are neither independent, nor identically distributed \cite{lewis_shedler_1979}.
 
 \section{\label{q:2}Review of the Thinning Algorithm}
 
 \subsubsection{Some Other Algorithms}
 There exist other algorithms for simulating Poisson processes, a few of which are briefly described.
 \begin{enumerate}
-\item Time-scale transformation of a homogeneous Poisson process via inverse of the integrated rate function $\Lambda(x)$. Cinlar \cite{cinlar1975introduction} states that the random variables $T1, T2, . . .$ are event times corresponding to a nonhomogeneous Poisson process with expectation function $\Lambda(t)$ if and only if $\Lambda(T1),\Lambda(T2), . . .$ are the event times corresponding to a homogeneous Poisson process with rate one. This of course requires the inverse of the integrated rate function $\Lambda(t)$ to be computed, which may prove costly and inefficient.
+\item One is the time-scale transformation of a homogeneous Poisson process via inverse of the integrated rate function $\Lambda(x)$. Cinlar \cite{cinlar1975introduction} states that the random variables $T1, T2, . . .$ are event times corresponding to a nonhomogeneous Poisson process with expectation function $\Lambda(t)$ if and only if $\Lambda(T1),\Lambda(T2), . . .$ are the event times corresponding to a homogeneous Poisson process with rate one. This of course requires the inverse of the integrated rate function $\Lambda(t)$ to be computed, which may prove costly and inefficient.
 
-\item Another method is to generate intervals between the points individually \cite{pasupathy}. It follows a similar inversion approach as the first method. Considering the $i$th inter-event time $X_i = T_i+1 - T_i$, conditional on the first $i$ event times $T_1 = t_1, T_2 = t_2, . . . , T_i = t_i$, its cdf can be derived as $Fti = 1 - e^{-\Lambda(ti + x) + \Lambda(ti)}$. Then $X_{i+1} - X{i}$ can be generated as $X_{i+1} - X{i} = F^{-1}(U_i)$, where $U_i \sim Unif(0,1)$. As stated in the original paper \cite{lewis_shedler_1979}, this process involves not only the computation of the inverse cdf, but the distribution has different parameters for each interval.
+\item Another method is to generate intervals between the points individually \cite{pasupathy}. This may seem more in line with the event-scheduling approach to simulation. It follows a similar inversion as the first method. Considering the $i$th inter-event time $X_i = T_{i+1} - T_i$, conditional on the first $i$ event times $T_1 = t_1, T_2 = t_2, . . . , T_i = t_i$, its cdf can be derived as $Fti = 1 - e^{-\Lambda(ti + x) + \Lambda(ti)}$. Then $X_{i+1} - X{i}$ can be generated as $X_{i+1} - X{i} = F^{-1}(U_i)$, where $U_i \sim Unif(0,1)$. As stated in the original paper \cite{lewis_shedler_1979}, this process involves not only the computation of the inverse cdf, but the distribution has different parameters for each interval.
 
 \item Simulation of Non-Homogeneous Poisson variates can be done through by generating order statistics from a distribution with cdf $F(t) = \Lambda(t)/\Lambda(t_0)$ for $t\in [0,t_0]$ \cite{lewis_shedler_1976}. Formally, let $T_1 , T_2 , ...$ be time(s) to event for a Non-Homogeneous Poisson process with integrated rate function $\Lambda(t)$. Conditional on having observed $N(t_0) = n$ points in $(0,t_0]$, $T_k$ is the $k$th order statistic from a distribution with cdf $F(t) = \Lambda(t) / \Lambda(t_0)$. Ordering can prove to be computationally expensive.
 \end{enumerate}
@@ -132,7 +134,7 @@ To construct a Non-Homogeneous Poisson process $\{N(t) , t \ge 0 \}$, with rate 
 \bar{\lambda}(t) \ge \lambda(t) \forall t \in (0,T]\\
 \bar{\lambda}(t) = sup_{t\in(0,T]}\lambda(t)
 \end{gather*}
-Then, for all $t$, the point from the dominating NHPP is retained with probability $\lambda(t)/\bar{\lambda}$. The remaining points form a NHPP with rate parameter $\lambda(t)$. It is noted that since points are deleted independently, the number of points in $\{N(x) : x \ge 0\}$ in any set of non-overlapping intervals are mutually independent.
+Then, for all $t$, the point from the dominating NHPP $N^{*}(t)$, is retained with probability $\lambda(t)/\bar{\lambda}$. The remaining points form an NHPP with rate parameter $\lambda(t)$. It is noted that since points are deleted independently, the number of points in $\{N(t) : t \ge 0\}$ in any set of non-overlapping intervals are mutually independent.
 
 \begin{algorithm}
 \label{alg:1}
@@ -166,7 +168,7 @@ Each method has drawbacks with respect to computational efficiency. In its simpl
 
 \begin{algorithm}
 \label{alg:2}
-\caption{Simulation of a Homogeneous Poisson Process with Rate $\lambda$, on $[0, T]$ <Insert reference to Yuanda Chen>}
+\caption{Simulation of a Homogeneous Poisson Process with Rate $\lambda$, on $[0, T]$. Slight variation of Algorithm 1 in Chen, 2016 \cite{chen}}
 \textbf{Input}: $\lambda,N$
 
 Initialize $n_0 = 0 ,\  t_0 = 0$\;
@@ -182,7 +184,7 @@ Set $n = n + 1 $\;
 }
 \end{algorithm}
 
-Uniform random numbers are used to generate Poisson variates by using the following algorithm, that can be found in \cite{chen}. Full implementation in Python can be found in the Appendix. Fig \ref{fig:hpp} shows the result of simulating a homogeneous Poisson process.
+Uniform random numbers are used to generate Poisson variates by using algorithm \ref{alg:2}, that can be found in \cite{chen}. Full implementation in Python can be found in the Appendix. Fig \ref{fig:hpp} shows the result of simulating a homogeneous Poisson process.
 
 \begin{figure}[H]
 \centering
@@ -190,7 +192,7 @@ Uniform random numbers are used to generate Poisson variates by using the follow
 \caption{\label{fig:hpp}Simulation of the time of occurrence of 1000 successive events for a homogeneous Poisson process having a rate of 8 events per year. $N(t)$ denotes the number of events occurring in the time period $[0,t]$.}
 \end{figure}
 
-The graph appears relatively linear. This would be expected as the rate of occurrence of events remains constant over any interval of time $(a,b)$ and hence the slope corresponding to the number of events over time (i.e. rate) also remains the same. A comparison agains $E[N(t)] = \lambda t$ has been plotted in Fig \ref{hppent} to demonstrate the linearity of the HPP.
+The graph appears relatively linear. This would be expected as the rate of occurrence of events remains constant over any interval of time $(a,b)$ and hence the slope corresponding to the number of events over time (i.e. rate) also remains the same. A comparison agains $E[N(t)] = \lambda t$ has been plotted in Fig \ref{fig:hppent} to demonstrate the linearity of the HPP.
 
 \begin{figure}[H]
 \centering
@@ -209,7 +211,7 @@ An NHPP is considered with a rate function that increases smoothly from 1 event 
 \end{figure}
 
 \section{\label{q:5}Performing the Thinning Algorithm with data from Homogeneous Poisson Process}
-Using the thinning algorithm, the data points from the previous homogeneous process are time-sampled to construct a Non-Homogeneous process. 
+Using the thinning algorithm, the data points from the previous homogeneous process are time-sampled to construct a Non-Homogeneous process. Code can be found in Appendix \ref{app:nhppcode}.
 
 \section{\label{q:6}Graphical Comparison of HPP and NHPP}
 Fig \ref{fig:nhpp} showcases the cumulative events $N(t)$ against time $t$. It is observed that, as opposed to homogeneous Poisson process, the line is not quite linear - the slope increases as time progresses. This can be expected as the rate parameter $\lambda(t) = (1.01)^t$ also increases with time. Due to deletion of points from the original homogeneous process, it is also noted that the total number of points has decreased from 1000 to just over 300.
@@ -217,7 +219,7 @@ Fig \ref{fig:nhpp} showcases the cumulative events $N(t)$ against time $t$. It i
 \begin{figure}
 \centering
 \includegraphics[scale=0.5]{NHPP.png}
-\caption{\label{fig:nhpp}Accumulated events following a NHPP with rate parameter $\lambda(t) = 1.01^t$.}
+\caption{\label{fig:nhpp}Accumulated events following an NHPP with rate parameter $\lambda(t) = 1.01^t$.}
 \end{figure}
 
 By integrating the rate function, we get 
@@ -228,17 +230,17 @@ By integrating the rate function, we get
 
 Noting the boundary condition that at $t=0$, $E[N(t)]=0$, we have $C = \frac{1.01^0}{ln(1.01)} = 100.499$.\\
 
-Thus,  $E[N(t)] = \frac{1.01^0}{ln(1.01)} - 100.499$. Plotting this onto the earlier graph, Fig \ref{fig:nhppent} is obtained. It can be seen that the orange line closely follows the blue stepped graph.
-
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{NHPP_ENt.png}
 \caption{\label{fig:nhppent}$E[N(t)]$, denoted by $\frac{1.01^0}{ln(1.01)} - 100.499$ superimposed on the NHPP.}
 \end{figure}
 
+Thus,  $E[N(t)] = \frac{1.01^t}{ln(1.01)} - 100.499$. Plotting this onto the earlier graph, Fig \ref{fig:nhppent} is obtained. It can be seen that the orange line closely follows the blue stepped graph.
+
 \appendix
 
-\section{Code}
+\section{\label{app:hppcode}Code for HPP}
 Below is the code for section \ref{q:3}. It simulates a homogeneous Poisson process with rate parameter $\lambda=8$ per year. Time to 1000 events is simulated and the graph generated from this code is Fig \ref{fig:hpp}.
 \begin{verbatim}
 # Imports
@@ -287,6 +289,7 @@ if __name__ == '__main__': # main namespace
     plt.show()
 \end{verbatim}
 
+\section{\label{app:nhppcode}Code for NHPP}
 Below is the code for section \ref{q:5}. It simulates a Non-Homogeneous Poisson process with rate parameter $\lambda(t)=1.01^t$ that smoothly increases from 1 event per year. The time boundary is kept at 140 years as this is roughly the longest time it took the HPP to reach 1000 events. The graphs generated from this code are Fig \ref{fig:nhpp} and Fig \ref{fig:nhppent}. In the latter, $E[N(t)]$ is shown along with the realizations from the NHPP to demonstrate	 that both the lines adhere to each other.
 \begin{verbatim}
 # Imports
@@ -361,10 +364,6 @@ if __name__ == '__main__':
 
 \end{verbatim}
 
-% The \nocite command causes all entries in a bibliography to be printed out
-% whether or not they are actually referenced in the text. This is appropriate
-% for the sample file to show the different styles of references, but authors
-% most likely will not want to use it.
 \nocite{*}
 
 \bibliography{apssamp}% Produces the bibliography via BibTeX.
