--- a/CA3/project_helper/apssamp.tex
+++ b/CA3/project_helper/apssamp.tex
@@ -32,6 +32,7 @@
 \usepackage{svg}
 \usepackage{float}
 \usepackage{hyperref}
+\usepackage{enumitem}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -69,7 +70,7 @@
              %  but any date may be explicitly specified
 
 \begin{abstract}
-This project is about Non-Homogeneous Poisson processes and how to simulate them. The thinning algorithm of Lewis and Shedler (1979) for simulating these processes will be discussed.
+This project is on Non-Homogeneous Poisson processes and how to simulate them. The thinning algorithm of Lewis and Shedler (1979) for simulating these processes will be discussed.
 
 \end{abstract}
 
@@ -80,20 +81,20 @@ This project is about Non-Homogeneous Poisson processes and how to simulate them
 Homogeneous Poisson processes (HPP) are the natural representation of events occuring in time. As they follow a fixed rate of `event occurrence', they are unable to model processes with varying incidence rate, such as shocks before and after earthquakes \cite{vere-jones_1970}, fluctuations in neural data \cite{gabbiani_cox_2010}, events with time-of-day patterns or those showing long-term growth or decay.\\
 
 
-This report will be loosely structured according to the following points:
+This report will be structured according to the following points:
 \begin{enumerate}
 \item Explanation of a Non-Homogeneous Poisson Process (NHPP) accompanied by clear mathematical definition;
-\item Review of the thinning algorithm of Lewis and Shedler (1979) \cite{lewis_shedler_1979} for simulating NHPP, with brief description of the algorithm, and its main benefits compared to other approaches;
+\item Review of the thinning algorithm of Lewis and Shedler, 1979 \cite{lewis_shedler_1979} for simulating NHPP, with brief description of the algorithm, and its main benefits compared to other approaches;
 \item Simulation of occurrence of 1000 successive events ${t_1, t_2, . . . , t_{1000}}$ for a homogeneous Poisson process having a rate of 8 events per year, followed by visual representation of the same;
 
-\item Determining whether the thinning algorithm can be used on the previous homogeneous Poisson process data to simulate an NHPP with a rate function that increases smoothly from 1 event per year at $t = 0$ by 1\% per year, i.e. $\lambda(t) = (1.01)^t$;
+\item Determining whether the thinning algorithm can be used on the previous HPP data to simulate an NHPP with a rate function that increases smoothly from 1 event per year at $t = 0$ by 1\% per year, i.e. $\lambda(t) = (1.01)^t$;
 \item Code to find occurence times for an NHPP having the rate function $\lambda(t) = (1.01)^t$ by using the thinning algorithm;
 \item Comparison of the plots of HPP and NHPP to demonstrate differences between the two.
 
 \end{enumerate}
 
 \section{\label{q:1}Description and Mathematical Definition}
-A non-homogeneous Poisson process can be thought of as a generalization of the homogeneous Poisson process. As opposed to its homogeneous counterpart where rate of occurrence of events is constant (denoted by $\lambda$), here the rate is a function of time, denoted by $\lambda(t)$. The process is specified either through its rate function $\lambda(t)$ (when it exists), or more generally through its expectation function $\Lambda(t) \equiv  E[N(t)]$. $\Lambda(\cdot)$ is therefore, monotone, non-decreasing and right-continuous. \\
+A non-homogeneous Poisson process can be thought of as a generalization of the homogeneous Poisson process. As opposed to its homogeneous counterpart where rate of occurrence of events is constant (denoted by $\lambda$), here the rate is a function of time, denoted by $\lambda(t)$. The process is specified either through its rate function $\lambda(t)$ (when it exists), or more generally through its expectation function $\Lambda(t) \equiv  E[N(t)]$ \cite{pasupathy}. $\Lambda(\cdot)$ is therefore, monotone, non-decreasing and right-continuous. \\
 
 When the rate function $\lambda(t)$ exists, $\Lambda(t) = \int_{0}^{t}\lambda(y) dy$ \cite{pasupathy}. Thus, the number of occurrences in the interval $(0,T]$ follows Poisson distribution $Pois(\int_{0}^{T}\lambda(y)dy)$ \cite{chen}. More formally, allowing the rate parameter to vary with time results in the following definition.
 
@@ -114,17 +115,17 @@ Time sampling an ordinary Poisson process (with constant rate $\lambda$) results
 \subsubsection{Some Other Algorithms}
 There exist other algorithms for simulating Poisson processes, a few of which are briefly described.
 \begin{enumerate}
-\item One is the time-scale transformation of a homogeneous Poisson process via inverse of the integrated rate function $\Lambda(x)$. Cinlar \cite{cinlar1975introduction} states that the random variables $T1, T2, . . .$ are event times corresponding to a nonhomogeneous Poisson process with expectation function $\Lambda(t)$ if and only if $\Lambda(T1),\Lambda(T2), . . .$ are the event times corresponding to a homogeneous Poisson process with rate one. This of course requires the inverse of the integrated rate function $\Lambda(t)$ to be computed, which may prove costly and inefficient.
+\item[a.] One is the time-scale transformation of a homogeneous Poisson process via inverse of the integrated rate function $\Lambda(x)$. Cinlar \cite{cinlar1975introduction} states that the random variables $T1, T2, . . .$ are event times corresponding to a nonhomogeneous Poisson process with expectation function $\Lambda(t)$ if and only if $\Lambda(T1),\Lambda(T2), . . .$ are the event times corresponding to a homogeneous Poisson process with rate one. This of course requires the inverse of the integrated rate function $\Lambda(t)$ to be computed, which may prove costly and inefficient.
 
-\item Another method is to generate intervals between the points individually \cite{pasupathy}. This may seem more in line with the event-scheduling approach to simulation. It follows a similar inversion as the first method. Considering the $i$th inter-event time $X_i = T_{i+1} - T_i$, conditional on the first $i$ event times $T_1 = t_1, T_2 = t_2, . . . , T_i = t_i$, its cdf can be derived as $Fti = 1 - e^{-\Lambda(ti + x) + \Lambda(ti)}$. Then $X_{i+1} - X{i}$ can be generated as $X_{i+1} - X{i} = F^{-1}(U_i)$, where $U_i \sim Unif(0,1)$. As stated in the original paper \cite{lewis_shedler_1979}, this process involves not only the computation of the inverse cdf, but the distribution has different parameters for each interval.
+\item[b.] Another method is to generate intervals between the points individually \cite{pasupathy}. This may seem more in line with the event-scheduling approach to simulation. It follows a similar inversion as the first method. Considering the $i$th inter-event time $X_i = T_{i+1} - T_i$, conditional on the first $i$ event times $T_1 = t_1, T_2 = t_2, . . . , T_i = t_i$, its cdf can be derived as $Fti = 1 - e^{-\Lambda(ti + x) + \Lambda(ti)}$. Then $X_{i+1} - X{i}$ can be generated as $X_{i+1} - X{i} = F^{-1}(U_i)$, where $U_i \sim Unif(0,1)$. As stated in the original paper \cite{lewis_shedler_1979}, this process involves not only the computation of the inverse cdf, but the distribution has different parameters for each interval.
 
-\item Simulation of Non-Homogeneous Poisson variates can be done through by generating order statistics from a distribution with cdf $F(t) = \Lambda(t)/\Lambda(t_0)$ for $t\in [0,t_0]$ \cite{lewis_shedler_1976}. Formally, let $T_1 , T_2 , ...$ be time(s) to event for a Non-Homogeneous Poisson process with integrated rate function $\Lambda(t)$. Conditional on having observed $N(t_0) = n$ points in $(0,t_0]$, $T_k$ is the $k$th order statistic from a distribution with cdf $F(t) = \Lambda(t) / \Lambda(t_0)$. Ordering can prove to be computationally expensive.
+\item[c.] Simulation of Non-Homogeneous Poisson variates can be done through by generating order statistics from a distribution with cdf $F(t) = \Lambda(t)/\Lambda(t_0)$ for $t\in [0,t_0]$ \cite{lewis_shedler_1976}. Formally, let $T_1 , T_2 , ...$ be time(s) to event for a Non-Homogeneous Poisson process with integrated rate function $\Lambda(t)$. Conditional on having observed $N(t_0) = n$ points in $(0,t_0]$, $T_k$ is the $k$th order statistic from a distribution with cdf $F(t) = \Lambda(t) / \Lambda(t_0)$. Ordering can prove to be computationally expensive.
 \end{enumerate}
 
 \subsubsection{The Thinning Algorithm}
 To construct a Non-Homogeneous Poisson process $\{N(t) , t \ge 0 \}$, with rate parameter $\lambda(t)$, over the interval $(0,T]$, the algorithm starts with a Non-Homogeneous Poisson process $\{N^{*}(t) , t \ge 0 \}$, with rate parameter $\bar{\lambda}(t)$ that dominates the set $\lambda(t)$ for all $t \in (0,T]$, that is 
 \begin{gather*}
-\bar{\lambda}(t) \ge \lambda(t) \forall t \in (0,T]\\
+\bar{\lambda}(t) \ge \lambda(t)\  \forall t \in (0,T]\\
 \bar{\lambda}(t) = sup_{t\in(0,T]}\lambda(t)
 \end{gather*}
 Then, for all $t$, the point from the dominating NHPP $N^{*}(t)$, is retained with probability $\lambda(t)/\bar{\lambda}$. The remaining points form an NHPP with rate parameter $\lambda(t)$. It is noted that since points are deleted independently, the number of points in $\{N(t) : t \ge 0\}$ in any set of non-overlapping intervals are mutually independent.
@@ -177,7 +178,7 @@ Set $n = n + 1 $\;
 }
 \end{algorithm}
 
-Uniform random numbers are used to generate Poisson variates by using algorithm \ref{alg:2}, that can be found in \cite{chen}. Full implementation in Python can be found in the Appendix. Fig \ref{fig:hpp} shows the result of simulating a homogeneous Poisson process.
+Uniform random numbers are used to generate Poisson variates by using algorithm \ref{alg:2}, that can be found in \cite{chen}. Full implementation in Python can be found in the Appendix. FIG \ref{fig:hpp} shows the result of simulating a homogeneous Poisson process.
 
 \begin{figure}[H]
 \centering
@@ -185,7 +186,7 @@ Uniform random numbers are used to generate Poisson variates by using algorithm 
 \caption{\label{fig:hpp}Simulation of the time of occurrence of 1000 successive events for a homogeneous Poisson process having a rate of 8 events per year. $N(t)$ denotes the number of events occurring in the time period $[0,t]$.}
 \end{figure}
 
-The graph appears relatively linear. This would be expected as the rate of occurrence of events remains constant over any interval of time $(a,b)$ and hence the slope corresponding to the number of events over time (i.e. rate) also remains the same. A comparison agains $E[N(t)] = \lambda t$ has been plotted in Fig \ref{fig:hppent} to demonstrate the linearity of the HPP.
+The graph appears relatively linear. This would be expected as the rate of occurrence of events remains constant over any interval of time $(a,b)$ and hence the slope corresponding to the number of events over time (i.e. rate) also remains the same. A comparison against $E[N(t)] = \lambda t$ has been plotted in FIG \ref{fig:hppent} to demonstrate the linearity of the HPP.
 
 \begin{figure}[H]
 \centering
@@ -195,7 +196,7 @@ The graph appears relatively linear. This would be expected as the rate of occur
 
 \section{\label{q:4}NHPP with a smoothly increasing rate function}
 
-An NHPP is considered with a rate function that increases smoothly from 1 event per year at $t = 0$ by $1\%$ per year, i.e. $\lambda(t) = (1.01)^t$. Looking at the previous homogeneous Poisson process from \ref{q:3}, it can be seen that the maximum time taken to accumulate 1000 events is $\sim140$. Fig \ref{fig:hpp_many_sim} shows this. Therefore, the maximum rate for the NHPP would be $(1.01)^{140} = 4.027$. The rate for the previous homogeneous Poisson process was 8. Hence, this is within the bounds of the original process. Thinning can be applied to simulate the NHPP from the previous HPP data.
+An NHPP is considered with a rate function that increases smoothly from 1 event per year at $t = 0$ by $1\%$ per year, i.e. $\lambda(t) = (1.01)^t$. Looking at the previous homogeneous Poisson process from \ref{q:3}, it can be seen that the maximum time taken to accumulate 1000 events is $\sim140$. FIG \ref{fig:hpp_many_sim} shows this. Therefore, the maximum rate for the NHPP would be $(1.01)^{140} = 4.027$. The rate for the previous homogeneous Poisson process was 8. Hence, this is within the bounds of the original process. Thinning can be applied to simulate the NHPP from the previous HPP data.
 
 \begin{figure}
 \centering
@@ -212,7 +213,7 @@ Fig \ref{fig:nhpp} showcases the cumulative events $N(t)$ against time $t$. It i
 \begin{figure}
 \centering
 \includegraphics[scale=0.5]{NHPP.png}
-\caption{\label{fig:nhpp}Accumulated events following an NHPP with rate parameter $\lambda(t) = 1.01^t$. $N(t)$ represents cumulative events. $t$ denotes time}
+\caption{\label{fig:nhpp}Accumulated events following an NHPP with rate parameter $\lambda(t) = 1.01^t$. $N(t)$ represents cumulative events. $t$ denotes time.}
 \end{figure}
 
 By integrating the rate function, we get 
@@ -226,15 +227,15 @@ Noting the boundary condition that at $t=0$, $E[N(t)]=0$, we have $C = \frac{1.0
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{NHPP_ENt.png}
-\caption{\label{fig:nhppent}$E[N(t)]$, denoted by $\frac{1.01^0}{ln(1.01)} - 100.499$ superimposed on the NHPP. $N(t)$ represents cumulative events. $t$ denotes time}
+\caption{\label{fig:nhppent}$E[N(t)]$, denoted by $\frac{1.01^0}{ln(1.01)} - 100.499$ superimposed on the NHPP. $N(t)$ represents cumulative events. $t$ denotes time.}
 \end{figure}
 
-Thus,  $E[N(t)] = \frac{1.01^t}{ln(1.01)} - 100.499$. Plotting this onto the earlier graph, Fig \ref{fig:nhppent} is obtained. It can be seen that the orange line closely follows the blue stepped graph.
+Thus,  $E[N(t)] = \frac{1.01^t}{ln(1.01)} - 100.499$. Plotting this onto the earlier graph, FIG \ref{fig:nhppent} is obtained. It can be seen that the orange line closely follows the blue stepped graph.
 
 \appendix
 
 \section{\label{app:hppcode}Code for HPP}
-Below is the code for section \ref{q:3}. It simulates a homogeneous Poisson process with rate parameter $\lambda=8$ per year. Time to 1000 events is simulated and the graph generated from this code is Fig \ref{fig:hpp}. .py files can be found \href{https://github.com/sourasen1011/Stochastic_Processes/blob/main/CA3/project_helper/HPP.py}{here}.
+Below is the code for section \ref{q:3}. It simulates a homogeneous Poisson process with rate parameter $\lambda=8$ per year. Time to 1000 events is simulated and the graph generated from this code is FIG \ref{fig:hpp}. .py files can be found \href{https://github.com/sourasen1011/Stochastic_Processes/blob/main/CA3/project_helper/HPP.py}{here}.
 \begin{verbatim}
 # Imports
 import numpy as np
@@ -285,7 +286,7 @@ if __name__ == '__main__': # main namespace
 \end{verbatim}
 
 \section{\label{app:nhppcode}Code for NHPP}
-Below is the code for section \ref{q:5}. It simulates a Non-Homogeneous Poisson process with rate parameter $\lambda(t)=1.01^t$ that smoothly increases from 1 event per year. The time boundary is kept at 140 years as this is roughly the longest time it took the HPP to reach 1000 events. The graphs generated from this code are Fig \ref{fig:nhpp} and Fig \ref{fig:nhppent}. In the latter, $E[N(t)]$ is shown along with the realizations from the NHPP to demonstrate	 that both the lines adhere to each other. .py files can be found \href{https://github.com/sourasen1011/Stochastic_Processes/blob/main/CA3/project_helper/NHPP.py}{here}.
+Below is the code for section \ref{q:5}. It simulates a Non-Homogeneous Poisson process with rate parameter $\lambda(t)=1.01^t$ that smoothly increases from 1 event per year. The time boundary is kept at 140 years as this is roughly the longest time it took the HPP to reach 1000 events. The graphs generated from this code are FIG \ref{fig:nhpp} and FIG \ref{fig:nhppent}. In the latter, $E[N(t)]$ is shown along with the realizations from the NHPP to that both the lines adhere to each other. .py files can be found \href{https://github.com/sourasen1011/Stochastic_Processes/blob/main/CA3/project_helper/NHPP.py}{here}.
 \begin{verbatim}
 # Imports
 import numpy as np
